# xsnow

./: youtube-xsnow
xsnow/: ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  addcopyright.sh  bootdate  bootdate.in  bootstrap  config.h.in  configure  configure.ac  dependencies  getversion  makedeb  makerasp  makerun  makeupload  simplemake.sh  testflags  torasp
xsnow-debian/debian.focal/: changelog
xsnow-debian/debian.sid/: changelog
xsnow-debian/debian.stretch/: changelog
xsnow-devel/: ChangeLog  Makefile.am  Makefile.in  README  README.devel  README.md  TODO  addcopyright.sh  bootstrap  config.h.in  configure  configure.ac  copyright.inc  dependencies  doconfigure  getversion  makedeb  makerasp  makerun  maketar  makeupload  pbuilderscript  simplemake.sh  testflags  torasp
xsnow-devel/debian/: changelog  control  copyright
xsnow-devel/debian.disco/: changelog
xsnow-devel/debian.eoan/: changelog  control
xsnow-devel/debian.focal/: changelog
xsnow-devel/debian.sid/: changelog
xsnow-devel/debian.stretch/: changelog  control
xsnow-devel/debian.tara/: changelog  control
xsnow-devel/debian/tests/: control  test1.sh  test2.sh
xsnow-devel/src/: Makefile.am  Makefile.in  Santa.c  Santa.h  alarm.h  birds.c  birds.h  blowoff.c  blowoff.h  buttons.h  clientwin.c  clientwin.h  clocks.c  clocks.h  csvpos.c  csvpos.h  debug.h  docs.c  docs.h  doit.h  doitb.h  dsimple.c  dsimple.h  fallensnow.c  fallensnow.h  flags.c  flags.h  gaussian.c  gaussian.h  gen_ui_xml.sh  globals.h  hashtable.cpp  hashtable.h  ixpm.c  ixpm.h  kdesetbg.c  kdesetbg.h  kdtree.c  kdtree.h  loadmeasure.c  (+44 more)
xsnow-devel/src/Pixmaps/: AltSanta1.xpm  AltSanta2.xpm  AltSanta3.xpm  AltSanta4.xpm  AltSantaRudolf1.xpm  AltSantaRudolf2.xpm  AltSantaRudolf3.xpm  AltSantaRudolf4.xpm  BigSanta1.xpm  BigSanta2.xpm  BigSanta3.xpm  BigSanta4.xpm  BigSanta81.xpm  BigSanta82.xpm  BigSanta83.xpm  BigSanta84.xpm  BigSantaRudolf1.xpm  BigSantaRudolf2.xpm  BigSantaRudolf3.xpm  BigSantaRudolf4.xpm  BigSantaRudolf81.xpm  BigSantaRudolf82.xpm  BigSantaRudolf83.xpm  BigSantaRudolf84.xpm  Makefile.am  Makefile.in  MediumSanta1.xpm  MediumSanta2.xpm  MediumSanta3.xpm  MediumSanta4.xpm  MediumSantaRudolf1.xpm  MediumSantaRudolf2.xpm  MediumSantaRudolf3.xpm  MediumSantaRudolf4.xpm  README  RegularSanta1.xpm  RegularSanta2.xpm  RegularSanta3.xpm  RegularSanta4.xpm  RegularSantaRudolf1.xpm  (+134 more)
xsnow-devel/src/Pixmaps.orig/: AltSanta1.xpm  AltSanta2.xpm  AltSanta3.xpm  AltSanta4.xpm  AltSantaRudolf1.xpm  AltSantaRudolf2.xpm  AltSantaRudolf3.xpm  AltSantaRudolf4.xpm  BigSanta1.xpm  BigSanta2.xpm  BigSanta3.xpm  BigSanta4.xpm  BigSanta81.xpm  BigSanta82.xpm  BigSanta83.xpm  BigSanta84.xpm  BigSantaRudolf1.xpm  BigSantaRudolf2.xpm  BigSantaRudolf3.xpm  BigSantaRudolf4.xpm  BigSantaRudolf81.xpm  BigSantaRudolf82.xpm  BigSantaRudolf83.xpm  BigSantaRudolf84.xpm  Makefile  Makefile.am  Makefile.in  MediumSanta1.xpm  MediumSanta4.xpm  MediumSantaRudolf2.xpm  MediumSantaRudolf3.xpm  MediumSantaRudolf4.xpm  RegularSanta1.xpm  RegularSanta2.xpm  RegularSanta4.xpm  RegularSantaRudolf1.xpm  RegularSantaRudolf2.xpm  RegularSantaRudolf3.xpm  RegularSantaRudolf4.xpm  bird2.xpm  (+37 more)
xsnow-gtk/: ChangeLog  Makefile.in  README.txt  WARNING  configure  configure.ac  makedeb  maketar  makeupload
xsnow-gtk/src/Pixmaps/: AltSanta1.xpm  AltSanta2.xpm  AltSanta4.xpm  AltSantaRudolf3.xpm  BigSanta2.xpm  BigSanta3.xpm  BigSanta84.xpm  BigSantaRudolf81.xpm  BigSantaRudolf84.xpm  Makefile.am  Makefile.in  MediumSanta1.xpm  MediumSanta3.xpm  MediumSantaRudolf3.xpm  RegularSanta4.xpm  RegularSantaRudolf2.xpm  eland.xpm  rendier.xpm  snow00.xpm  snow01.xpm  snow02.xbm  snow02.xpm  snow03.xbm  snow03.xpm  snow04.xbm  snow04.xpm  snow05.xpm  snow06.xbm  snow06.xpm  snowtree.xpm  star.xpm
xsnow-gtk3/: ChangeLog  Makefile.am  README.gtk3  config.h.in  configure  configure.ac  makectags  makedeb  makerasp  pbuilderscript  prevent-remakes  theme-colors.gpa
xsnow/afterburner/: Makefile.am  Makefile.in
xsnow/data/: Makefile.am  Makefile.in  xsnow.desktop.in
xsnow/debian/: changelog  control  copyright  watch
xsnow/debian.disco/: changelog
xsnow/debian.eoan/: changelog
xsnow/debian.focal/: changelog
xsnow/debian.sid/: changelog
xsnow/debian.stretch/: changelog
xsnow/debian.tara/: changelog
xsnow/debian/tests/: test1.sh  test2.sh
xsnow/po/: cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  hu.gmo  hu.po  is.gmo  is.po  it.gmo  it.po  lt.gmo  lt.po  lv.gmo  lv.po  messages.mo  nl.gmo  nl.po  no.gmo  no.po  pl.gmo  pl.po  pt.gmo  pt.po  ro.gmo  ro.po  ru.gmo  (+6 more)
xsnow/pofiles/: cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sv.po  uk.po
xsnow/src/: Makefile.am  Makefile.in  Santa.c  Santa.h  alarm.h  aurora.c  aurora.h  birdglobals.h  birds.c  birds.h  blowoff.c  blowoff.h  buttons.h  clientwin.c  clientwin.h  clocks.c  clocks.h  csvpos.c  csvpos.h  debug.h  docs.c  docs.h  doit.h  doitb.h  dsimple.c  dsimple.h  fallensnow.c  fallensnow.h  flags.c  flags.h  gaussian.h  gen_snow_includes.sh  gen_ui_xml.sh  globals.h  hashtable.cpp  hashtable.h  ixpm.c  ixpm.h  kdesetbg.c  kdesetbg.h  (+65 more)
xsnow/src/Pixmaps/: AltSanta1.xpm  AltSanta2.xpm  AltSanta3.xpm  AltSanta4.xpm  AltSantaRudolf1.xpm  AltSantaRudolf2.xpm  AltSantaRudolf3.xpm  AltSantaRudolf4.xpm  BigSanta1.xpm  BigSanta2.xpm  BigSanta3.xpm  BigSanta4.xpm  BigSanta81.xpm  BigSanta82.xpm  BigSanta83.xpm  BigSanta84.xpm  BigSantaRudolf1.xpm  BigSantaRudolf2.xpm  BigSantaRudolf3.xpm  BigSantaRudolf4.xpm  BigSantaRudolf81.xpm  BigSantaRudolf82.xpm  BigSantaRudolf83.xpm  BigSantaRudolf84.xpm  Makefile.am  Makefile.in  MediumSanta1.xpm  MediumSanta2.xpm  MediumSanta3.xpm  MediumSanta4.xpm  MediumSantaRudolf1.xpm  MediumSantaRudolf2.xpm  MediumSantaRudolf3.xpm  MediumSantaRudolf4.xpm  RegularSanta1.xpm  RegularSanta2.xpm  RegularSanta3.xpm  RegularSanta4.xpm  RegularSantaRudolf1.xpm  RegularSantaRudolf2.xpm  (+55 more)
(+128 files in other folders)
