# -copyright-
#-#
#-# xsnow: let it snow on your desktop
#-# Copyright (C) 1984,1988,1990,1993-1995,2000-2001 Rick Jansen
#-#               2019 Willem Vermin
#-# 
#-# This program is free software: you can redistribute it and/or modify
#-# it under the terms of the GNU General Public License as published by
#-# the Free Software Foundation, either version 3 of the License, or
#-# (at your option) any later version.
#-#
#-# This program is distributed in the hope that it will be useful,
#-# but WITHOUT ANY WARRANTY; without even the implied warranty of
#-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#-# GNU General Public License for more details.
#-# 
#-# You should have received a copy of the GNU General Public License
#-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#-#
EXTRA_DIST = \
AltSanta1.xpm \
AltSanta2.xpm \
AltSanta3.xpm \
AltSanta4.xpm \
AltSantaRudolf1.xpm \
AltSantaRudolf2.xpm \
AltSantaRudolf3.xpm \
AltSantaRudolf4.xpm \
BigSanta1.xpm \
BigSanta2.xpm \
BigSanta3.xpm \
BigSanta4.xpm \
BigSanta81.xpm \
BigSanta82.xpm \
BigSanta83.xpm \
BigSanta84.xpm \
BigSantaRudolf1.xpm \
BigSantaRudolf2.xpm \
BigSantaRudolf3.xpm \
BigSantaRudolf4.xpm \
BigSantaRudolf81.xpm \
BigSantaRudolf82.xpm \
BigSantaRudolf83.xpm \
BigSantaRudolf84.xpm \
eland.xpm \
huis4.xpm \
Makefile.am \
MediumSanta1.xpm \
MediumSanta2.xpm \
MediumSanta3.xpm \
MediumSanta4.xpm \
MediumSantaRudolf1.xpm \
MediumSantaRudolf2.xpm \
MediumSantaRudolf3.xpm \
MediumSantaRudolf4.xpm \
RegularSanta1.xpm \
RegularSanta2.xpm \
RegularSanta3.xpm \
RegularSanta4.xpm \
RegularSantaRudolf1.xpm \
RegularSantaRudolf2.xpm \
RegularSantaRudolf3.xpm \
RegularSantaRudolf4.xpm \
rendier.xpm \
snow00.xbm \
snow01.xbm \
snow02.xbm \
snow03.xbm \
snow04.xbm \
snow05.xbm \
snow06.xbm \
snowtree.xpm \
star.xbm \
tannenbaum.xpm \
tree-1_100px.xpm \
tree.xpm \
xsnow.xpm 
